--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "description": "CSE Library Management",
   "private": true,
-  "main": "main.js",
+  "main": "public/electron.js",
   "author": "Vishal <vishal.pvn.edu@gmail.com>",
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,32 +18,60 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "axios": "^1.6.5",
+    "body-parser": "^1.20.2",
+    "bookshelf": "^1.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "compression": "^1.7.4",
     "concurrently": "^8.2.2",
-    "electron": "^28.1.3",
-    "electron-builder": "^24.9.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
+    "electron-packager": "^17.1.2",
     "electron-serve": "^1.2.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "fs": "^0.0.1-security",
+    "knex": "^3.1.0",
     "lucide-react": "^0.309.0",
+    "moment": "^2.30.1",
+    "morgan": "^1.10.0",
+    "next-themes": "^0.2.1",
+    "nodemon": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "sonner": "^1.3.1",
+    "sql.js": "^1.9.0",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "wait-on": "^7.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "rebuild": "electron-rebuild -f -w sqlite3",
+    "server": "nodemon server.js",
+    "dev": "concurrently \"npm run server\" \" npm run start\"",
+    "migrate": "knex migrate:latest --knexfile db/knexfile.js",
+    "create-migrate": "knex migrate:make migration --knexfile db/knexfile.js",
     "electron": "wait-on http://localhost:3000 && electron .",
-    "electron-dev": "concurrently \" npm run start\" \"npm run electron\"",
+    "electron-dev": "concurrently \" npm run server\" \"cross-env BROWSER=none npm run start\" \"npm run electron\"",
     "preelectron-pack": "npm run build",
+    "electron-packold": "electron-packager . --icon=public/logo.ico --asar.unpack=*.{node,dll,db} --overwrite CSELibrary --platform=win32 --arch=x64 --out=release-builds",
     "electron-pack": "electron-builder",
-    "electron-dev1": "electron ."
+    "postinstall": "electron-builder install-app-deps"
   },
   "eslintConfig": {
     "extends": [
@@ -60,7 +93,13 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "@types/sql.js": "^1.4.9",
     "autoprefixer": "^10.4.16",
+    "electron": "^28.1.3",
+    "electron-builder": "^24.9.1",
+    "electron-rebuild": "^3.2.9",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-winstaller": "^5.2.1",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
   }
